feat: web improvements based on pitchdeck

--- a/index.html
+++ b/index.html
@@ -21,12 +21,14 @@
 
     <title>wopee - autonomous testing platform</title>
     <meta
-      content="Reduce waste in app building. The roomba for sw testing."
+      content="Wopee is an intelligent autonomous testing platform enabled by AI technologies. AI/ML-based testing streamlines the testing process by reducing the need for human intervention.
+      Fully automated planning, creation, maintenance, and analysis of tests. 
+      Improves outcomes by continuously learning from the data collected during testing activities."
       name="description"
     />
 
     <meta
-      content="autonomous testing, AI/ML testing, machine testing, test automation"
+      content="autonomous testing, AI/ML testing, machine testing, test automation, visual testing"
       name="keywords"
     />
 
@@ -99,8 +101,9 @@
               Wopee is the autonomous testing platform.
             </h1>
             <h2 data-aos="fade-up" data-aos-delay="400">
-              The "roomba" in SW testing. Use our bots to improve efficiency and
-              reduce waste in development and testing.
+              AI/ML-based testing streamlines the testing process by reducing
+              the need for human intervention. Includes fully automated
+              planning, creation, maintenance, and analysis of tests.
             </h2>
             <div data-aos="fade-up" data-aos-delay="600">
               <div class="text-center text-lg-start">
@@ -267,6 +270,110 @@
       </section>
       <!-- End Services Section -->
 
+      <!-- ======= How it works Section ======= -->
+      <section id="how-it-works" class="values">
+        <div class="container" data-aos="fade-up">
+          <header class="section-header">
+            <h2>How it works</h2>
+            <p>
+              Reduce the test automation complexity and keep its benefits 💪
+            </p>
+          </header>
+
+          <div class="row">
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="box">
+                <img src="assets/img/setup.png" class="img-fluid" alt="" />
+                <h3>1. Set up bot execution</h3>
+                <p>
+                  Enabling all client's needs for autonomous testing. Easy to
+                  use interface.
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-4 mt-4 mt-lg-0"
+              data-aos="fade-up"
+              data-aos-delay="400"
+            >
+              <div class="box">
+                <img src="assets/img/model.png" class="img-fluid" alt="" />
+                <h3>2. Teach bot test</h3>
+                <p>
+                  Gets more regression testing with same resources.
+                  Automatically validates application functionality.
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-4 mt-4 mt-lg-0"
+              data-aos="fade-up"
+              data-aos-delay="600"
+            >
+              <div class="box">
+                <img src="assets/img/commander.png" class="img-fluid" alt="" />
+                <h3>3. Monitor testing results</h3>
+                <p>
+                  Finds most relevant bugs always and quickly. No scripting
+                  required and mild learning curve.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End How it works Section -->
+
+      <!-- ======= Customers Section ======= -->
+      <section id="customers" class="values">
+        <div class="container" data-aos="fade-up">
+          <header class="section-header">
+            <h2>Customers</h2>
+            <p>Trusted by the technology leaders, our early adopters</p>
+          </header>
+
+          <div class="row">
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+              <div class="box">
+                <img src="assets/img/multitude.png" class="img-fluid" alt="" />
+                <h3>Multitude</h3>
+                <p>
+                  Wopee autonomous testing is extremely valuable in testing our
+                  marketing & customer account pages.
+                </p>
+                <p>
+                  Juraj Žabka Engineering Lead, Multitude European provider of
+                  Digital Financial Services 400k+ customers in 20 countries
+                </p>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-6 mt-4 mt-lg-0"
+              data-aos="fade-up"
+              data-aos-delay="400"
+            >
+              <div class="box">
+                <img src="assets/img/livesport.png" class="img-fluid" alt="" />
+                <h3>Livesport</h3>
+                <p>
+                  Wopee showcased its potential to save us valuable time and
+                  effort in maintaining the visual integrity of our application.
+                </p>
+                <p>
+                  Martin Šimon Test Automation Lead, Livesport The fastest
+                  sports information and scores provider from 35+ sports to 100M
+                  people worldwide (60+ web and mobile apps)
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Customers Section -->
+
       <!-- ======= Pricing Section ======= -->
       <section id="pricing" class="pricing">
         <div class="container" data-aos="fade-up">
@@ -282,7 +389,7 @@
               data-aos-delay="100"
             >
               <div class="box">
-                <h3 style="color: #07d5c0">Free Plan</h3>
+                <h3 style="color: #07d5c0">Free Trial</h3>
                 <div class="price">
                   <sup>EUR</sup>0<br /><span> per user/mo</span>
                 </div>
@@ -423,8 +530,8 @@
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Jan Honza Beránek</h4>
-                  <span>developer, reporting & CSO</span>
+                  <h4>Jan (honza) Beránek</h4>
+                  <span>CXO & developer, reporting</span>
                   <p>Experienced web developer, technical team leader</p>
                 </div>
               </div>
@@ -456,7 +563,7 @@
                 </div>
                 <div class="member-info">
                   <h4>Marcel (vem) Veselka</h4>
-                  <span>tester & CEO</span>
+                  <span>CEO & tester</span>
                   <p>20 years in software testing, senior test consultant</p>
                 </div>
               </div>
@@ -487,7 +594,7 @@
                 <div class="member-info">
                   <h4>Olena (alenka) Nahorna</h4>
                   <span>developer (commander) </span>
-                  <p>inspired beginner front-end developer</p>
+                  <p>inspired beginner full-stack developer</p>
                 </div>
               </div>
             </div>
@@ -514,8 +621,8 @@
                   </div>
                 </div>
                 <div class="member-info">
-                  <h4>Ondřej Ondra Winter</h4>
-                  <span>developer (bots and brains) & CTO </span>
+                  <h4>Ondřej (ondra) Winter</h4>
+                  <span>CTO & developer (bots and brains) </span>
                   <p>Experienced test automation engineer, Ph.D. student</p>
                 </div>
               </div>
