--- a/career/you-are-in/index.html
+++ b/career/you-are-in/index.html
@@ -100,29 +100,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col-lg-12 text-center">
-              <h4>Let's work together!</h4>
-              <p>Join our developement core team.</p>
-            </div>
-            <div class="col-lg-6">
-              <form
-                action="career/you-are-in/"
-                method="GET"
-                role="form"
-                class="join-form" id="join-form" name="join-form">
-                <input id="motivation" name="motivation" type="checkbox" onclick="document.getElementById('interest').checked=false" /> <label for="motivation">Motivation + courage + open mind <red>*</red></label><br />
-                <input id="interest" name="interest" type="checkbox" onclick="document.getElementById('motivation').checked=false" /> <label for="interest">True interest in web app UI + API developement <red>*</red></label><br />
-                <input id="experience" name="experience" type="checkbox" disabled /> <label for="experience">(immediately applicable nodejs related experience / knowledge) <span onclick="document.getElementById('shortcut').style=''"> =&gt; shortcut</span></label><br />
-                <section id="shortcut" style="display: none;">
-                  <input id="stack" name="stack" type="text" /> <label for="stack">Prefered nodejs-based stack of technologies for demonstration of your skills (be specific)</label><br />
-                  <input id="tools" name="tools" type="text" /> <label for="tools">Prefered os / distro / ide / other tools and services to work with</label><br />
-                  </section>
-                <input id="bio" name="bio" type="text" /> <label for="bio">Url of your bio / profile / CV or just something about you</label><br />
-                <input id="email" name="email" type="email" /> <label for="email">E-mail address to reach you</label><br />
-                <br />
-                <button type="submit" class="btn btn-primary">Apply</button>
-                <br />
-                <p><red>*</red> Yes. It would be nice if you can check them both :-)</p>
-              </form>
+              <h4>You are (nearly) in!</h4>
             </div>
           </div>
         </div>
