--- a/career/index.html
+++ b/career/index.html
@@ -116,7 +116,7 @@
                   <input id="stack" name="stack" type="text" /> <label for="stack">Prefered nodejs-based stack of technologies for demonstration of your skills (be specific)</label><br />
                   <input id="tools" name="tools" type="text" /> <label for="tools">Prefered os / distro / ide / other tools and services to work with</label><br />
                   </div>
-                <input id="bio" name="bio" type="text" /> <label for="bio">Url of your bio / profile / CV or just something about you</label><br />
+                <input id="bio" name="bio" type="url"/> <label for="bio">Url of your bio / profile / CV or just something about you</label><br />
                 <input id="email" name="email" type="email" /> <label for="email">E-mail address to reach you</label><br />
                 <p style="font-size: 75%;"><span style="color:red">* ...it would be nice if you can check them both :-)</span></p>
                 <br />
