fix: dummy action

--- a/career/index.html
+++ b/career/index.html
@@ -104,7 +104,7 @@
             </div>
             <div class="col-lg-8">
               <form
-                action="career/you-are-in/"
+                action="career/you-are-in/index.html"
                 method="GET"
                 role="form"
                 class="join-form" id="join-form" name="join-form">
