--- a/career/index.html
+++ b/career/index.html
@@ -109,17 +109,25 @@
                 role="form"
                 class="join-form" id="join-form" name="join-form">
                 <h5>Join our developement core team.</h5>
-                <input id="motivation" name="motivation" type="checkbox" onclick="document.getElementById('interest').checked=false" /> <label for="motivation">Motivation + courage + open mind <span style="color:red">*</span></label><br />
-                <input id="interest" name="interest" type="checkbox" onclick="document.getElementById('motivation').checked=false" /> <label for="interest">Genuine interest in web app UI + API developement <span style="color:red">*</span></label><br />
-                <input id="experience" name="experience" type="checkbox" disabled /> <label for="experience">(immediately applicable nodejs related experience / knowledge) <span onclick="document.getElementById('shortcut').style=''"> =&gt; shortcut</span></label><br />
+                <p>You just need:</p>
+                <ul>
+                  <li>
+                    <input id="motivation" name="motivation" type="checkbox" onclick="document.getElementById('interest').checked=false" /> <label for="motivation">Motivation + courage + open mind <span style="color:red">*</span></label><br />
+                  </li>
+                  <li>
+                    <input id="interest" name="interest" type="checkbox" onclick="document.getElementById('motivation').checked=false" /> <label for="interest">Genuine interest in web app UI + API developement <span style="color:red">*</span></label><br />
+                  </li>
+                  <li>
+                    <input id="experience" name="experience" type="checkbox" disabled /> <label for="experience">Immediately applicable nodejs related or UX experience / knowledge <span onclick="document.getElementById('shortcut').style=''"> =&gt; shortcut</span></label><br />
+                  </li>
+                </ul>
                 <div id="shortcut" style="display: none;">
-                  <input id="stack" name="stack" type="text" /> <label for="stack">Prefered nodejs-based stack of technologies for demonstration of your skills (be specific)</label><br />
+                  <input id="stack" name="stack" type="text" /> <label for="stack">Prefered stack of technologies for demonstration of your skills (be specific)</label><br />
                   <input id="tools" name="tools" type="text" /> <label for="tools">Prefered os / distro / ide / other tools and services to work with</label><br />
                   </div>
-                <input id="bio" name="bio" type="url"/> <label for="bio">Url of your bio / profile / CV or just something about you</label><br />
-                <input id="email" name="email" type="email" /> <label for="email">E-mail address to reach you</label><br />
-                <p style="font-size: 75%;"><span style="color:red">* ...it would be nice if you can check them both :-)</span></p>
-                <br />
+                <label for="bio">Url of your bio / profile / CV or just something about you:</label> <input id="bio" name="bio" type="url"/><br />
+                <label for="email">E-mail address to reach you:</label> <input id="email" name="email" type="email" /> <br />
+                <p style="font-size: 75%; margin-top: 1rem;"><span style="color:red">* ...it would be nice if you can check them both :-)</span></p>
                 <button type="submit" class="btn btn-primary">Apply</button>
                 <br />
               </form>
