fix: other style tuning

--- a/career/index.html
+++ b/career/index.html
@@ -122,8 +122,8 @@
                   </li>
                 </ul>
                 <div id="shortcut" style="display: none;">
-                  <input id="stack" name="stack" type="text" /> <label for="stack">Prefered stack of technologies for demonstration of your skills (be specific)</label><br />
-                  <input id="tools" name="tools" type="text" /> <label for="tools">Prefered os / distro / ide / other tools and services to work with</label><br />
+                  <label for="stack">Prefered stack of technologies for demonstration of your skills (be specific):</label> <input id="stack" name="stack" type="text" /><br />
+                  <label for="tools">Prefered os / distro / ide / other tools and services to work with:</label> <input id="tools" name="tools" type="text" /><br />
                   </div>
                 <label for="bio">Url of your bio / profile / CV or just something about you:</label> <input id="bio" name="bio" type="url"/><br />
                 <label for="email">E-mail address to reach you:</label> <input id="email" name="email" type="email" /> <br />
