--- a/career/index.html
+++ b/career/index.html
@@ -21,7 +21,7 @@
     <script>
 
       $(document).ready(function () {
-        $("career-application-form").submit(function (event) {
+        $("#career-application-form").submit(function (event) {
           var formData = {
             ref: "refs/heads/main",
             inputs: {
