--- a/career/index.html
+++ b/career/index.html
@@ -147,7 +147,7 @@
                 action="you-are-in.html"
                 method="GET"
                 role="form"
-                class="join-form" id="join-form" name="career-application-form">
+                class="career-application-form" id="career-application-form name="career-application-form">
                 <h5>Join our developement core team.</h5>
                 <p>You just need:</p>
                 <ul>
