--- a/career/index.html
+++ b/career/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-    <script
+    <!-- <script
       async
       src="https://www.googletagmanager.com/gtag/js?id=G-PVTHWLV51B"
     ></script>
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -14,7 +15,7 @@
       gtag("js", new Date());
 
       gtag("config", "G-PVTHWLV51B");
-    </script>
+    </script> -->
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 
