--- a/career/index.html
+++ b/career/index.html
@@ -51,7 +51,7 @@
             console.log(data);
           });
 
-          // event.preventDefault();
+          event.preventDefault();
         });
       });
 
