--- a/career/index.html
+++ b/career/index.html
@@ -23,6 +23,8 @@
 
       $(document).ready(function () {
         $("#career-application-form").submit(function (event) {
+          var submitResult = false;
+          var validRegex = /^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/;
           var formData = {
             ref: "refs/heads/main",
             inputs: {
@@ -36,22 +38,32 @@
             }
           };
 
-          $.ajax({
-            type: "POST",
-            url: "https://api.github.com/repos/Wopee-io/Career/actions/workflows/career-form-submission.yml/dispatches",
-            headers: {
-              "Accept": "application/vnd.github+json",
-              "Authorization": "token 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",
-              "X-GitHub-Api-Version": "2022-11-28"
-            },
-            data: formData,
-            dataType: "json",
-            encode: true,
-          }).done(function (data) {
-            console.log(data);
-          });
-
-          event.preventDefault();
+          if ($("#email").val().match(validRegex)) {
+              $.ajax({
+                type: "POST",
+                url: "https://api.github.com/repos/Wopee-io/Career/actions/workflows/career-form-submission.yml/dispatches",
+                headers: {
+                  "Accept": "application/vnd.github+json",
+                  "Authorization": "token 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",
+                  "X-GitHub-Api-Version": "2022-11-28"
+                },
+                data: JSON.stringify(formData),
+                dataType: "json",
+        		    async: false,
+                success: function (data) {
+                  console.log(data);
+                  submitResult = true;
+                },
+                error: function() {
+                    alert('There has been an error, please alert us immediately.');
+                }
+              })
+           } else {
+             alert("Invalid email address!");
+             $("#email").focus();
+           };
+          // event.preventDefault();
+		      return submitResult;
         });
       });
 
