feat: add job description

--- a/career/index.html
+++ b/career/index.html
@@ -168,7 +168,7 @@
                 class="career-application-form"
                 id="career-application-form"
                 name="career-application-form">
-                <h5>Join our developement core team.</h5>
+                <h5>Join our developement core team to level up user experience...</h5>
                 <p>You just need:</p>
                 <ul>
                   <li>
@@ -189,8 +189,38 @@
                 <label for="email">E-mail address to reach you:</label> <input id="email" name="email" type="text" /> <br />
                 <p style="font-size: 75%; margin-top: 1rem;"><span style="color:red">* ...it would be nice if you can check them both :-)</span></p>
                 <button type="submit" class="btn btn-primary">Apply</button>
-                <br />
               </form>
+            </div>
+            <div class="col-lg-8">
+              <h5>Frontend & API Developer - Autonomous Software Testing SaaS</h5>
+              <p>
+                Join our ambitious startup creating a game-changing SaaS platform for autonomous software testing.
+              </p>
+              <p>
+                <strong>Responsibilities:</strong> As one of two frontend and API developers and the fifth member of our team working remotely most of the time, you will:
+                Transform feature briefs into impactful and scalable frontend and API solutions, ensuring seamless user experiences.
+                Collaborate with cross-functional team on estimating, designing, implementing and integrating changes.
+                Drive effective testing practices, contributing to code reviews and maintaining code integrity.
+              </p>
+              <p>
+                <strong>Qualifications:</strong> We value:
+                Motivation, courage, and an open-minded approach.
+                Adaptable developer skills and genuine interest in web apps (strong foundation in HTML, CSS, and JavaScript is essential).
+                Proficiency in any current Node.js related technologies and frameworks, spanning both web frontend and API domains.
+              </p>
+              <p>
+                <strong>Experience:</strong> You may have:
+                1-2 years of similar developer experience, or you might be a student/junior with a strong grasp of web technologies.
+              </p>
+              <p>
+                <strong>Preferred Qualifications:</strong> While not obligatory, familiarity with Nuxt.js or Vue.js, GraphQL, Neo4j and testing frameworks such as Jest, Cypress or Playwright would be a significant advantage.
+              </p>
+              <p>
+                <strong>Benefits and Perks:</strong> Embrace the startup experience with:
+                Unbounded freedom to shape our innovative product and take on significant responsibilities.
+                An environment that champions personal and professional growth, utilizing the latest tech.
+                Outstanding flexibility to maintain a healthy balance while contributing to our groundbreaking work.
+              </p>
             </div>
           </div>
         </div>
