--- a/career/index.html
+++ b/career/index.html
@@ -163,7 +163,7 @@
               <br/>
             </div>
             <div class="col-lg-8">
-              <h5>Frontend & API Developer - Autonomous Software Testing SaaS</h5>
+              <h5>Frontend & API Developer</h5>
               <p>
                 Join our ambitious startup creating a game-changing SaaS platform for autonomous software testing.
               </p>
@@ -202,7 +202,7 @@
                 class="career-application-form"
                 id="career-application-form"
                 name="career-application-form">
-                <h5>Join our developement core team to level up user experience...</h5>
+                <h5>Can you level up user experience?</h5>
                 <p>You just need:</p>
                 <ul>
                   <li>
