--- a/career/index.html
+++ b/career/index.html
@@ -169,28 +169,36 @@
               </p>
               <p>
                 <strong>Responsibilities:</strong> As one of two frontend and API developers and the fifth member of our team working remotely most of the time, you will:
-                Transform feature briefs into impactful and scalable frontend and API solutions, ensuring seamless user experiences.
-                Collaborate with cross-functional team on estimating, designing, implementing and integrating changes.
-                Drive effective testing practices, contributing to code reviews and maintaining code integrity.
+                <ul>
+                  <li>Transform feature briefs into impactful and scalable frontend and API solutions, ensuring seamless user experiences.</li>
+                  <li>Collaborate with cross-functional team on estimating, designing, implementing and integrating changes.</li>
+                  <li>Drive effective testing practices, contributing to code reviews and maintaining code integrity.</li>
+                </ul>
               </p>
               <p>
                 <strong>Qualifications:</strong> We value:
-                Motivation, courage, and an open-minded approach.
-                Adaptable developer skills and genuine interest in web apps (strong foundation in HTML, CSS, and JavaScript is essential).
-                Proficiency in any current Node.js related technologies and frameworks, spanning both web frontend and API domains.
+                <ul>
+                  <li>Motivation, courage, and an open-minded approach.</li>
+                  <li>Adaptable developer skills and genuine interest in web apps (strong foundation in HTML, CSS, and JavaScript is essential).</li>
+                  <li>Proficiency in any current Node.js related technologies and frameworks, spanning both web frontend and API domains.</li>
+                </ul>
               </p>
               <p>
                 <strong>Experience:</strong> You may have:
-                1-2 years of similar developer experience, or you might be a student/junior with a strong grasp of web technologies.
+                <ul>
+                  <li>1-2 years of similar developer experience, or you might be a student/junior with a strong grasp of web technologies.</li>
+                </ul>
               </p>
               <p>
                 <strong>Preferred Qualifications:</strong> While not obligatory, familiarity with Nuxt.js or Vue.js, GraphQL, Neo4j and testing frameworks such as Jest, Cypress or Playwright would be a significant advantage.
               </p>
               <p>
                 <strong>Benefits and Perks:</strong> Embrace the startup experience with:
-                Unbounded freedom to shape our innovative product and take on significant responsibilities.
-                An environment that champions personal and professional growth, utilizing the latest tech.
-                Outstanding flexibility to maintain a healthy balance while contributing to our groundbreaking work.
+                <ul>
+                  <li>Unbounded freedom to shape our innovative product and take on significant responsibilities.</li>
+                  <li>An environment that champions personal and professional growth, utilizing the latest tech.</li>
+                  <li>Outstanding flexibility to maintain a healthy balance while contributing to our groundbreaking work.</li>
+                </ul>
               </p>
               <br/>
             </div>
@@ -202,7 +210,7 @@
                 class="career-application-form"
                 id="career-application-form"
                 name="career-application-form">
-                <h5>Can you level up user experience?</h5>
+                <h5>🧐 Can you level up user experience?</h5>
                 <p>You just need:</p>
                 <ul>
                   <li>
