--- a/jan-beranek/index.html
+++ b/jan-beranek/index.html
@@ -99,7 +99,7 @@
           <!-- Start of Meetings Embed Script -->
           <div
             class="meetings-iframe-container"
-            data-src="https://meetings-eu1.hubspot.com/marcel-veselka?embed=true"
+            data-src="https://meetings-eu1.hubspot.com/jan-beranek?embed=true"
           ></div>
           <script
             type="text/javascript"
